--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -9,11 +9,13 @@
                 xmlns:main="clr-namespace:File.Manager.BusinessLogic.ViewModels.Main;assembly=File.Manager.BusinessLogic" xmlns:c1="clr-namespace:File.Manager.Controls.Files" xmlns:c="clr-namespace:File.Manager.Controls"
                 d:DataContext="{d:DesignInstance Type=main:MainWindowViewModel}"
                 mc:Ignorable="d"
-                Title="{x:Static res:Strings.Window_Title}" Height="450" Width="800" x:Name="root"
-                FocusManager.FocusedElement="{Binding ElementName=pLeft}">
+                Title="{x:Static res:Strings.Window_Title}" Height="450" Width="800" 
+                FocusManager.FocusedElement="{Binding ElementName=pLeft}"
+                x:Name="root">
 
     <f:RibbonWindow.InputBindings>
         <KeyBinding Key="U" Modifiers="Ctrl" Command="{Binding Path=SwitchPanesCommand}" />
+        <KeyBinding Key="F3" Command="{Binding ViewCommand}" />
         <KeyBinding Key="F5" Command="{Binding CopyCommand}" />
         <KeyBinding Key="F6" Command="{Binding MoveCommand}" />
         <KeyBinding Key="F7" Command="{Binding NewFolderCommand}" />
@@ -23,67 +25,70 @@
         <KeyBinding Key="Subtract" Command="{Binding RemoveFromSelectionCommand}" />
     </f:RibbonWindow.InputBindings>
 
-    <DockPanel>
+    <Grid x:Name="gHost">
+        <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-        <f:Ribbon DockPanel.Dock="Top">
-            <f:RibbonTabItem Header="{x:Static res:Strings.Ribbon_Tab_Home}">
-                <f:RibbonGroupBox Header="{x:Static res:Strings.Ribbon_Group_Actions}">
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_View}" 
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/View32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/View16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_Edit}" 
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Edit32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/Edit16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_Copy}" 
-                              Command="{Binding CopyCommand}"
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Copy32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/Copy16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_Move}" 
-                              Command="{Binding MoveCommand}"
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Move32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/Move16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_NewFolder}" 
-                              Command="{Binding NewFolderCommand}"
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_Delete}" 
-                              Command="{Binding DeleteCommand}"
-                              LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Delete32.png"
-                              Icon="pack://application:,,,/File.Manager;component/Resources/Images/Delete16.png"/>
-                </f:RibbonGroupBox>
+            <f:Ribbon DockPanel.Dock="Top">
+                <f:RibbonTabItem Header="{x:Static res:Strings.Ribbon_Tab_Home}">
+                    <f:RibbonGroupBox Header="{x:Static res:Strings.Ribbon_Group_Actions}">
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_View}"
+                                  Command="{Binding ViewCommand}"
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/View32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/View16.png"/>
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_Edit}" 
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Edit32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/Edit16.png"/>
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_Copy}" 
+                                  Command="{Binding CopyCommand}"
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Copy32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/Copy16.png"/>
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_Move}" 
+                                  Command="{Binding MoveCommand}"
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Move32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/Move16.png"/>
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_NewFolder}" 
+                                  Command="{Binding NewFolderCommand}"
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder16.png"/>
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_Delete}" 
+                                  Command="{Binding DeleteCommand}"
+                                  LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Delete32.png"
+                                  Icon="pack://application:,,,/File.Manager;component/Resources/Images/Delete16.png"/>
+                    </f:RibbonGroupBox>
 
-                <f:RibbonGroupBox Header="{x:Static res:Strings.Ribbon_Group_Selection}">
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_AddToSelection}"
+                    <f:RibbonGroupBox Header="{x:Static res:Strings.Ribbon_Group_Selection}">
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_AddToSelection}"
                               Command="{Binding AddToSelectionCommand}"
                               Size="Large"
                               LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/AddToSelection32.png"
                               Icon="pack://application:,,,/File.Manager;component/Resources/Images/AddToSelection16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_RemoveFromSelection}"
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_RemoveFromSelection}"
                               Command="{Binding RemoveFromSelectionCommand}"
                               Size="Middle"
                               LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/RemoveFromSelection32.png"
                               Icon="pack://application:,,,/File.Manager;component/Resources/Images/RemoveFromSelection16.png"/>
-                    <f:Button Header="{x:Static res:Strings.Ribbon_Button_InvertSelection}"
+                        <f:Button Header="{x:Static res:Strings.Ribbon_Button_InvertSelection}"
                               Command="{Binding InvertSelectionCommand}"
                               Size="Middle"
                               LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/InvertSelection32.png"
                               Icon="pack://application:,,,/File.Manager;component/Resources/Images/InvertSelection16.png"/>
 
-                </f:RibbonGroupBox>
-            </f:RibbonTabItem>
-        </f:Ribbon>
+                    </f:RibbonGroupBox>
+                </f:RibbonTabItem>
+            </f:Ribbon>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
 
-            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"
+                <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"
                     SnapsToDevicePixels="True" UseLayoutRounding="True" />
-            <c:Pane x:Name="pRight" Grid.Column="1" DataContext="{Binding RightPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"
+                <c:Pane x:Name="pRight" Grid.Column="1" DataContext="{Binding RightPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"
                     SnapsToDevicePixels="True" UseLayoutRounding="True" />
-        </Grid>
-        
-    </DockPanel>
+            </Grid>
+
+        </DockPanel>
+    </Grid>
 </f:RibbonWindow>
