--- a/File.Manager/File.Manager/Windows/ViewWindow.xaml
+++ b/File.Manager/File.Manager/Windows/ViewWindow.xaml
@@ -3,10 +3,27 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:File.Manager.Windows"
+        xmlns:dvm="clr-namespace:File.Manager.BusinessLogic.ViewModels.View.Display;assembly=File.Manager.BusinessLogic"
+        xmlns:local="clr-namespace:File.Manager.Windows" 
+        xmlns:dc="clr-namespace:File.Manager.Controls.Display"
         mc:Ignorable="d"
         Title="ViewWindow" Height="450" Width="800">
+    <Window.InputBindings>
+        <KeyBinding Key="Esc" Command="{Binding CloseCommand}" />
+    </Window.InputBindings>
     <Border>
-        <ContentControl />
+        <ContentControl Content="{Binding Display}">
+            <ContentControl.Resources>
+
+                <DataTemplate DataType="{x:Type dvm:TextDisplayViewModel}">
+                    <dc:TextDisplay />
+                </DataTemplate>
+
+                <DataTemplate DataType="{x:Type dvm:HexDisplayViewModel}">
+                    <dc:HexDisplay />
+                </DataTemplate>
+                
+            </ContentControl.Resources>
+        </ContentControl>
     </Border>
 </Window>
