--- a/File.Manager/File.Manager/Windows/ViewWindow.xaml
+++ b/File.Manager/File.Manager/Windows/ViewWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:dvm="clr-namespace:File.Manager.BusinessLogic.ViewModels.View.Display;assembly=File.Manager.BusinessLogic"
         xmlns:local="clr-namespace:File.Manager.Windows" 
         xmlns:dc="clr-namespace:File.Manager.Controls.Display"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowStartupLocation="CenterOwner"
         Title="ViewWindow" Height="450" Width="800">
     <Window.InputBindings>
         <KeyBinding Key="Esc" Command="{Binding CloseCommand}" />
